# voxflow

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
benchmarks/: bench_sampling_steps.py
configs/: acoustic_cfm.yaml  base.yaml  speaker_encoder.yaml
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/: 01_speaker_embedding.py  02_text_frontend.py  03_flow_matching_toy.py  04_clone_pipeline.py  README.md
src/voxflow/: __init__.py  cli.py  config.py  exceptions.py  pipeline.py  registry.py  version.py
src/voxflow/audio/: __init__.py  io.py  mel.py  stft.py
src/voxflow/data/: __init__.py  dataset.py  preprocess.py
src/voxflow/models/: __init__.py  diffusion.py  duration.py  estimator.py  flow_matching.py  modules.py  speaker_encoder.py  text_encoder.py  vocoder.py
src/voxflow/text/: __init__.py  english.py  frontend.py  normalize.py  pinyin.py  symbols.py
src/voxflow/train/: __init__.py  losses.py  trainer.py
src/voxflow/utils/: __init__.py  checkpoint.py  logging.py  seed.py
tests/: conftest.py  test_audio_io.py  test_checkpoint.py  test_cli.py  test_config.py  test_dataset.py  test_diffusion.py  test_english.py  test_estimator.py  test_flow_matching.py  test_frontend.py  test_mel.py  test_modules.py  test_pinyin.py  test_pipeline.py  test_registry.py  test_speaker_encoder.py  test_stft.py  test_symbols.py  test_text_encoder.py  test_text_normalize.py  test_train.py  test_velocity_field.py  test_version.py  test_vocoder.py
